--- a/class-projects/class-project-6/app/globals.css
+++ b/class-projects/class-project-6/app/globals.css
@@ -148,7 +148,7 @@ li:hover{
     display: none;
 }
 
-@media screen and (max-width: 1080px) {
+@media screen and (min-height: 1100px) {
     .big_section {
         flex-direction: column-reverse;
     }
